<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="cartVM"
            type="com.sun.dummyshop.ui.cart.CartViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/dp_56">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerCartProducts"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dp_4"
                    android:overScrollMode="never"
                    app:data="@{cartVM.products}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:listitem="@layout/item_cart_product" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_toolbar"
            android:elevation="@dimen/dp_4">

            <ImageButton
                android:id="@+id/buttonBack"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/dp_4"
                android:background="@android:color/transparent"
                android:contentDescription="@null"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="@id/textCartTitle"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/textCartTitle" />

            <TextView
                android:id="@+id/textCartTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dp_8"
                android:elevation="@dimen/dp_4"
                android:padding="@dimen/dp_8"
                android:text="@string/title_cart"
                android:textAlignment="center"
                android:textColor="@color/color_pickled_bluewood"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/bg_view_checkout"
            android:elevation="@dimen/dp_4">

            <TextView
                android:id="@+id/textTotalTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dp_8"
                android:layout_marginStart="@dimen/dp_16"
                android:elevation="@dimen/dp_4"
                android:padding="@dimen/dp_8"
                android:text="@string/text_total"
                android:textAlignment="center"
                android:textColor="@color/color_pickled_bluewood"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textTotal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dp_4"
                android:layout_marginStart="@dimen/dp_2"
                android:elevation="@dimen/dp_4"
                android:padding="@dimen/dp_8"
                android:text="@{@string/text_price(cartVM.total)}"
                android:textColor="@color/color_pickled_bluewood"
                android:textSize="@dimen/sp_22"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/buttonCheckout"
                app:layout_constraintStart_toEndOf="@id/textTotalTitle"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonCheckout"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_16"
                android:background="@drawable/bg_button_checkout"
                android:elevation="@dimen/dp_8"
                android:paddingHorizontal="@dimen/dp_16"
                android:paddingVertical="@dimen/dp_neg_8"
                android:text="@string/text_checkout"
                android:textAllCaps="false"
                android:enabled="@{!cartVM.isEmpty()}"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            layout="@layout/dialog_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:loading="@{cartVM.isLoading()}" />

        <TextView
            android:id="@+id/textNoResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/text_empty_cart"
            android:textAlignment="center"
            android:textSize="@dimen/sp_24"
            android:textStyle="bold"
            app:visibility="@{cartVM.isEmpty()}" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
