<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="searchVM"
            type="com.sun.dummyshop.ui.search.SearchViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/dp_56">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textSearchHistoryTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_8"
                    android:text="@string/title_search_history"
                    android:textColor="@color/color_pickled_bluewood"
                    android:textSize="@dimen/sp_24"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_goneMarginTop="@dimen/dp_4" />

                <TextView
                    android:id="@+id/textClearAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:text="@string/text_clear_all"
                    app:visibility="@{!searchVM.isEmpty()}"
                    android:textColor="@color/color_pickled_bluewood"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintBaseline_toBaselineOf="@id/textSearchHistoryTitle"
                    app:layout_constraintEnd_toEndOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerSearchHistory"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    app:data="@{searchVM.keywords}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textSearchHistoryTitle"
                    tools:itemCount="4"
                    tools:listitem="@layout/item_keyword" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_toolbar"
            android:elevation="@dimen/dp_4">

            <ImageButton
                android:id="@+id/buttonBack"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/dp_4"
                android:background="@android:color/transparent"
                android:contentDescription="@null"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="@id/editTextSearch"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/editTextSearch" />

            <EditText
                android:id="@+id/editTextSearch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dp_8"
                android:hint="@string/text_search_hint"
                android:imeOptions="actionSearch"
                android:importantForAutofill="no"
                android:background="@null"
                android:inputType="text"
                android:paddingHorizontal="@dimen/dp_16"
                android:paddingVertical="@dimen/dp_8"
                android:textSize="@dimen/sp_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/buttonSearch"
                app:layout_constraintStart_toEndOf="@id/buttonBack"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/buttonSearch"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="@dimen/dp_8"
                android:background="@android:color/transparent"
                android:contentDescription="@null"
                android:src="@drawable/ic_search"
                app:layout_constraintBottom_toBottomOf="@id/editTextSearch"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/editTextSearch" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
