<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="homeVM"
            type="com.sun.dummyshop.ui.home.HomeViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerCategories"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_60"
                    android:orientation="horizontal"
                    android:overScrollMode="never"
                    app:data="@{homeVM.categories}"
                    app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:spanCount="2"
                    tools:listitem="@layout/item_category" />

                <TextView
                    android:id="@+id/textTopSellingTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_4"
                    android:text="@string/title_top_selling"
                    android:textColor="@color/color_pickled_bluewood"
                    android:textSize="@dimen/sp_24"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recyclerCategories" />

                <TextView
                    android:id="@+id/textTopSellingSeeMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:drawablePadding="@dimen/dp_4"
                    android:text="@string/text_see_more"
                    android:textColor="@color/color_pickled_bluewood"
                    android:textSize="@dimen/sp_14"
                    android:textStyle="italic"
                    app:drawableEndCompat="@drawable/ic_next"
                    app:layout_constraintBaseline_toBaselineOf="@id/textTopSellingTitle"
                    app:layout_constraintEnd_toEndOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerTopSelling"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_4"
                    android:overScrollMode="never"
                    app:data="@{homeVM.topSellingProducts}"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textTopSellingSeeMore"
                    app:spanCount="2"
                    tools:itemCount="4"
                    tools:listitem="@layout/item_product" />

                <TextView
                    android:id="@+id/textTopRatingTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_4"
                    android:text="@string/title_top_rating"
                    android:textColor="@color/color_pickled_bluewood"
                    android:textSize="@dimen/sp_24"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recyclerTopSelling" />

                <TextView
                    android:id="@+id/textTopRatingSeeMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:drawablePadding="@dimen/dp_4"
                    android:text="@string/text_see_more"
                    android:textColor="@color/color_pickled_bluewood"
                    android:textSize="@dimen/sp_14"
                    android:textStyle="italic"
                    app:drawableEndCompat="@drawable/ic_next"
                    app:layout_constraintBaseline_toBaselineOf="@id/textTopRatingTitle"
                    app:layout_constraintEnd_toEndOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerTopRating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_4"
                    android:overScrollMode="never"
                    android:paddingBottom="@dimen/dp_56"
                    app:data="@{homeVM.topRatingProducts}"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textTopRatingTitle"
                    app:spanCount="2"
                    tools:itemCount="4"
                    tools:listitem="@layout/item_product" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_toolbar"
            android:elevation="@dimen/dp_4">

            <TextView
                android:id="@+id/textSearch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dp_8"
                android:layout_marginStart="@dimen/dp_8"
                android:drawablePadding="@dimen/dp_8"
                android:padding="@dimen/dp_8"
                android:text="@string/text_search_hint"
                android:textSize="@dimen/sp_16"
                android:textStyle="normal"
                app:drawableStartCompat="@drawable/ic_search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/buttonCart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/buttonCart"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="@dimen/dp_8"
                android:background="@android:color/transparent"
                android:contentDescription="@null"
                android:src="@drawable/ic_cart"
                app:layout_constraintBottom_toBottomOf="@id/textSearch"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/textSearch" />

            <TextView
                android:id="@+id/textItemQuantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_text_quantity"
                android:text="@{Integer.toString(homeVM.itemInCartQuantity)}"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_16"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="@id/buttonCart"
                app:layout_constraintTop_toTopOf="@id/buttonCart" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            layout="@layout/dialog_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:loading="@{homeVM.isLoading()}" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
